fix: clean up input accessibility lint